# reason-graphql-fullstack

./: .gitignore  LICENSE  Makefile  README.md  bsconfig.json  dune-project  graphql_schema.json  package.json  reason-graphql-fullstack.opam  server.esy.lock.json  server.json  webpack.config.js
public/: graphiql.html  index.html  style.css
server.esy.lock/: index.json
server.esy.lock/opam-override/num.1.1/: package.json
src/client/: App.re  Editor.re  Loader.re  Mutations.re
src/server/: dune  jbuild  main.re  schema.re  server.re
src/shared/: Shared.re  dune  jbuild
