opam-version: "2.0"
maintainer: "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Nuno Monteiro <anmonteiro@gmail.com>" ]
license: "MIT"
homepage: "https://github.com/anmonteiro/reason-graphql-fullstack"
dev-repo: "git+https://github.com/anmonteiro/reason-graphql-fullstack.git"
bug-reports: "https://github.com/anmonteiro/reason-graphql-fullstack/issues"
build: [
  ["jbuilder" "build" "-p" "@graphql" "-j" jobs]
]
depends: [
  "ocaml" { >= "4.03.0"}
  "dune" {build}
  "lwt"
  "cohttp"
  "cohttp-lwt"
  "graphql"
  "graphql-lwt"
  "yojson"
]
